[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/VolumeSetting.gd" type="Script" id=1]
[ext_resource path="res://sfx/bgMusicAudioVolumeTest.ogg" type="AudioStream" id=2]

[node name="VolumeSetting" type="HBoxContainer"]
margin_top = 24.0
margin_right = 125.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 73.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "VolumeBus"

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 77.0
margin_right = 227.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="drag_ended" from="VolumeSlider" to="." method="_on_VolumeSlider_drag_ended"]
[connection signal="drag_started" from="VolumeSlider" to="." method="_on_VolumeSlider_drag_started"]
